Infrastructure/sg/template.yml
AWSTemplateFormatVersion: 2010-09-09

Resources:
  AlbLogginFluentdTestSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: Logging-fluentd-test-Alb-SG
      GroupDescription: Alb security group
      VpcId: vpc-cf7068a9
      SecurityGroupIngress:
        - Description: Traffic from outside to port 80
          FromPort: 80
          IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          ToPort: 80
      Tags:
        - Key: Name
          Value: Alb-SG

  LogginFluentdTestSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: Logging-fluentd-test-SG
      GroupDescription: Logging-fluentd-test security group
      SecurityGroupIngress:
        - Description: Traffic from ALB
          FromPort: 80
          IpProtocol: tcp
          SourceSecurityGroupId: !Ref AlbLogginFluentdTestSG
          ToPort: 80
      VpcId: vpc-cf7068a9
      Tags:
        - Key: Name
          Value: LogginFluentdTestSG

  # ElasticSearchSGEgress:
  #   Type: "AWS::EC2::SecurityGroupIngress"
  #   Properties:
  #     GroupId:
  #       Fn::ImportValue: !Sub ${Environment}-infrastructure-logs-SG-ES
  #     IpProtocol: tcp
  #     FromPort: 443
  #     ToPort: 443
  #     SourceSecurityGroupId: !Ref LogginFluentdTestSG

  #Delete when network awsvpc
  # ElasticSearchSGEgressDefault:
  #   Type: "AWS::EC2::SecurityGroupIngress"
  #   Properties:
  #     GroupId:
  #       Fn::ImportValue: !Sub ${Environment}-infrastructure-logs-SG-ES
  #     IpProtocol: tcp
  #     FromPort: 443
  #     ToPort: 443
  #     SourceSecurityGroupId:
  #       Fn::ImportValue: !Sub ${Environment}-infrastructure-ecs-SG-MainEcsClusterSG

Outputs:
  AlbLogginFluentdTestSG:
    Description: DHSimulator ALB security group
    Value: !Ref AlbLogginFluentdTestSG
    Export:
      Name: !Sub ${AWS::StackName}-AlbLogginFluentdTestSG

  LogginFluentdTestSG:
    Description: DHSimulator security group
    Value: !Ref LogginFluentdTestSG
    Export:
      Name: !Sub ${AWS::StackName}-LogginFluentdTestSG
